--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* modo agrupado */
+    /* Modo agrupador */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
